--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Build Docker image
         run: |
+          cd service
           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/friends-private-leaderboard:latest .
           docker tag ${{ secrets.DOCKER_HUB_USERNAME }}/friends-private-leaderboard:latest ${{ secrets.DOCKER_HUB_USERNAME }}/friends-private-leaderboard:${{ github.sha }}
 
